--- a/src/app/components/tasks-item/tasks-item.component.html
+++ b/src/app/components/tasks-item/tasks-item.component.html
@@ -1,4 +1,4 @@
-<div class="task">
-    <h3>{{task.text}}<fa-icon [icon]="faTimes" [ngStyle]="{'color':'red'}"></fa-icon></h3>
+<div class="task" [ngClass]="{ reminder: task.reminder }" (click)="onToggle(task)">
+    <h3>{{task.text}}<fa-icon [icon]="faTimes" [ngStyle]="{'color':'red'}" (click)="onDelete(task)"></fa-icon></h3>
     <p>{{task.day}}</p>
 </div>
